# messages

./: CHANGELOG.md  README.md
autoware_auto_msgs/: CMakeLists.txt  package.xml
autoware_auto_msgs/cmake/: TrajectoryPoint.msg.in
autoware_auto_msgs/msg/: .gitignore  Trajectory.msg  TrajectoryPoint.msg
command_msgs/: CMakeLists.txt  package.xml
command_msgs/msg/: Command.msg  CommandArrayStamped.msg
drive_api_msgs/: CMakeLists.txt  package.xml
f1tenth_race/: CMakeLists.txt  package.xml
messages/: CMakeLists.txt  package.xml
obstacle_msgs/: CMakeLists.txt  package.xml
obstacle_msgs/msg/: SegmentObstacle.msg
plan_msgs/: CMakeLists.txt  package.xml
teensy_drive_msgs/: CMakeLists.txt  package.xml
trajectory/: CMakeLists.txt  package.xml
trajectory/msg/: Vehicle_trajectory.msg
