<?xml version="1.0"?>
<package>
  <name>command_msgs</name>
  <version>0.0.1</version>
  <description>
    ROS message definitions for commanding nodes (e.g. Drive-API).
  </description>

  <maintainer email="klapajar@fel.cvut.cz">Jaroslav Klapálek</maintainer>

  <license>TODO</license>

  <author email="klapajar@fel.cvut.cz">Jaroslav Klapálek</author>

  <buildtool_depend>catkin</buildtool_depend>

  <!-- build_depend libraries -->
  <build_depend>message_generation</build_depend>

  <!-- build_depend message types -->
  <build_depend>std_msgs</build_depend>

  <!-- run_depend libraries -->
  <run_depend>message_runtime</run_depend>
</package>
