<?xml version="1.0"?>
<?xml-model
  href="http://download.ros.org/schema/package_format3.xsd"
  schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>command_msgs</name>
  <version>0.0.2</version>
  <description>
    ROS message definitions for commanding nodes (e.g. Drive-API).
  </description>

  <maintainer email="f1tenth@rtime.felk.cvut.cz">F1tenth CTU Community</maintainer>

  <license>TODO</license>

  <author email="klapajar@fel.cvut.cz">Jaroslav Klapálek</author>

  <url type="repository">https://github.com/CTU-F1T/messages</url>

  <buildtool_depend>catkin</buildtool_depend>

  <!-- build_depend libraries -->
  <build_depend>message_generation</build_depend>

  <!-- build_depend message types -->
  <build_depend>std_msgs</build_depend>

  <!-- run_depend libraries -->
  <exec_depend>message_runtime</exec_depend>
</package>
