<?xml version="1.0"?>
<?xml-model
  href="http://download.ros.org/schema/package_format3.xsd"
  schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>f1tenth_race</name>
  <version>0.1.0</version>
  <description>
    This package is used as a remainder of the old v.0 project. In this
    version it is temporarily used as an holder for two messages, that
    are used for communication on the very low level.
  </description>

  <maintainer email="f1tenth@rtime.felk.cvut.cz">F1tenth CTU Community</maintainer>

  <license>GPLv3</license>

  <author email="vajnamar@fel.cvut.cz">Martin Vajnar</author>

  <url type="repository">https://github.com/CTU-F1T/messages</url>

  <buildtool_depend>catkin</buildtool_depend>

  <!-- build_depend libraries -->
  <build_depend>message_generation</build_depend>

  <!-- run_depend libraries -->
  <exec_depend>message_runtime</exec_depend>
</package>
