<?xml version="1.0"?>
<?xml-model
  href="http://download.ros.org/schema/package_format3.xsd"
  schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>messages</name>
  <version>0.1.0</version>
  <description>
    Custom ROS message definitions for our nodes.
  </description>

  <maintainer email="f1tenth@rtime.felk.cvut.cz">F1tenth CTU Community</maintainer>

  <license>GPLv3</license>

  <author email="klapajar@fel.cvut.cz">Jaroslav Klapálek</author>

  <url type="repository">https://github.com/CTU-F1T/messages</url>

  <buildtool_depend>catkin</buildtool_depend>

  <!-- exec_depend libraries -->
  <exec_depend>command_msgs</exec_depend>
  <exec_depend>f1tenth_race</exec_depend>
  <exec_depend>obstacle_msgs</exec_depend>
  <exec_depend>plan_msgs</exec_depend>
  <exec_depend>trajectory</exec_depend>
  <exec_depend>vesc_msgs</exec_depend>

  <export>
    <metapackage/>
    <index url="git@github.com:CTU-F1T/messages.git" />
  </export>
</package>
