<?xml version="1.0"?>
<?xml-model
  href="http://download.ros.org/schema/package_format3.xsd"
  schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>plan_msgs</name>
  <version>0.0.2</version>
  <description>
    The plan_msgs package, that contains message types used
    for planning the actions for the vehicle.

    This package is a follow up from 'trajectory' (also 'trajectory_msgs'),
    but this name was not selected as there is already a package with
    the same name in the official ROS repository.
  </description>

  <maintainer email="f1tenth@rtime.felk.cvut.cz">F1tenth CTU Community</maintainer>

  <license>TODO</license>

  <author email="kopecdav@fel.cvut.cz">David Kopecký</author>

  <url type="repository">https://github.com/CTU-F1T/messages</url>

  <buildtool_depend>catkin</buildtool_depend>

  <!-- build_depend libraries -->
  <build_depend>message_generation</build_depend>

  <!-- build_depend message types -->
  <build_depend>std_msgs</build_depend>
  <build_depend>geometry_msgs</build_depend>

  <!-- run_depend libraries -->
  <exec_depend>message_runtime</exec_depend>
</package>
