<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>teensy_drive_msgs</name>
  <version>0.0.1</version>
  <description>
    Message definitions for teensy_drive package.
  </description>

  <maintainer email="f1tenth@rtime.felk.cvut.cz">F1tenth CTU Community</maintainer>

  <license>Apache License 2.0</license>

  <author email="vajnamar@fel.cvut.cz">Martin Vajnar</author>
    <author email="klapajar@fel.cvut.cz">Jaroslav Klapálek</author>

    <url type="repository">https://github.com/CTU-F1T/messages</url>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <buildtool_depend>rosidl_default_generators</buildtool_depend>

  <!-- run_depend libraries -->
  <exec_depend>rosidl_default_runtime</exec_depend>

  <member_of_group>rosidl_interface_packages</member_of_group>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
