<?xml version="1.0"?>
<package>
  <name>trajectory</name>
  <version>0.0.2</version>
  <description>The trajectory package</description>

  <maintainer email="klapajar@fel.cvut.cz">Jaroslav Klapálek</maintainer>

  <license>TODO</license>

  <author email="kopecdav@fel.cvut.cz">David Kopecký</author>

  <buildtool_depend>catkin</buildtool_depend>

  <!-- build_depend libraries -->
  <build_depend>message_generation</build_depend>

  <!-- build_depend message types -->
  <build_depend>geometry_msgs</build_depend>

  <!-- run_depend libraries -->
  <run_depend>message_runtime</run_depend>
</package>
