<?xml version="1.0"?>
<?xml-model
  href="http://download.ros.org/schema/package_format3.xsd"
  schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>trajectory</name>
  <version>0.0.3</version>
  <description>The trajectory package</description>

  <maintainer email="f1tenth@rtime.felk.cvut.cz">F1tenth CTU Community</maintainer>

  <license>GPLv3</license>

  <author email="kopecdav@fel.cvut.cz">David Kopecký</author>

  <url type="repository">https://github.com/CTU-F1T/messages</url>

  <buildtool_depend condition="$ROS_VERSION == 1">catkin</buildtool_depend>
  <buildtool_depend condition="$ROS_VERSION == 2">ament_cmake</buildtool_depend>
  <buildtool_depend condition="$ROS_VERSION == 2">rosidl_default_generators</buildtool_depend>

  <!-- build_depend libraries -->
  <build_depend condition="$ROS_VERSION == 1">message_generation</build_depend>

  <!-- build_depend message types -->
  <build_depend>geometry_msgs</build_depend>

  <!-- run_depend libraries -->
  <exec_depend condition="$ROS_VERSION == 1">message_runtime</exec_depend>
  <exec_depend condition="$ROS_VERSION == 2">rosidl_default_runtime</exec_depend>

  <member_of_group condition="$ROS_VERSION == 2">rosidl_interface_packages</member_of_group>

  <!-- Any other parameters can be stored here. -->
  <export>
    <index url="git@github.com:CTU-F1T/messages.git" />

    <build_type condition="$ROS_VERSION == 1">catkin</build_type>
    <build_type condition="$ROS_VERSION == 2">ament_cmake</build_type>
  </export>
</package>
